# cmake_usage

./: CMakeLists.txt  README.md
include/: Gateway.h  mylib.h
src/: Gateway.c
